# marketing_api_verify

./: Cargo.toml
.github/workflows/: rust-build.yml
src/: main.rs
src/api/: gdt.rs  mod.rs  router.rs  tt.rs
src/model/: adgroup.rs  advertiser.rs  balance.rs  base.rs  creative.rs  error.rs  message.rs  mod.rs  project.rs  promotion.rs  report.rs  rta.rs  target.rs
src/share/: common.rs
